Adicionando dialog para abrir mapa no formulario de trip

--- a/viajatcc-frontend/src/index.html
+++ b/viajatcc-frontend/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>ViajatccFrontend</title>
@@ -9,9 +10,13 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=directions_bus" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=directions_bus" />
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCk-pBIR5GShm-kpY2z_Wawi99IshxVM6s&libraries=places" async defer></script>
 </body>
+
 </html>
